@@ -211,6 +211,7 @@ check all formats
 0.934830053608610054115427799558087197935200286533499400
 0.661475187921069742727520633979626889791045796292710056
 -190
+-188
 0.953260474794660686250509013566383496014986229687151072 + 16.29021572039039
 07929631726451921643054665845864660536*I
 0
@@ -330,4 +331,4 @@ zeta(s)*zeta(s-a)
   ***   at top-level: lfunorderzero([errG,[[1,8]~,[1,2]~]])
   ***                 ^-------------------------------------
   *** lfunorderzero: incorrect type in lfunorderzero [vector-valued] (t_VEC).
-Total time spent: 5595
+Total time spent: 6736
