@@ -533,4 +533,31 @@ t_VEC).")
 2410229341718281905886 + 0.58778525229247312916870595463907276860*I], [-1.00
 00000000000000000000000000000000000 + 0.E-38*I, -1.0000000000000000000000000
 000000000000 + 0.E-38*I]]
-Total time spent: 2481
+38 (lfun(2+2*I)): 0.72548989481303783216227417079245424438 - 0.2308205673493
+9106433365440335307054690*I
+38 (lfun): 0.78539816339744830961566084581987572105*x^-1 + O(x^0)
+38 (lfuncreate): 0.78539816339744830961566084581987572105*x^-1 + O(x^0)
+38 (lfunderiv): 1.5707963267948966192313216916397514421*x^-3 + O(x^0)
+38 (lfunlambda): 1.0000000000000000000000000000000000000*x^-1 + O(x^0)
+38 (lfunderivlambda): 2.0000000000000000000000000000000000000*x^-3 + O(x^0)
+38 (lfuncheckfeq): -126
+38 (lfunhardy): -0.97015131557059479318247051718915637096
+38 (lfunorderzero): 0
+38 (lfuntheta): 0.0037418601725423530816919183393838490569
+38 (lfunan): [1, 2, 0, 4, 10, 0, 0, 8, 9, 20]
+39 (lfun(2+2*I)): 0.96988491230440641238657342364061570567 - 0.1643915517658
+5914023446789239531500695*I
+39 (lfun): 1.2725645584163707364143503829855104713
+39 (lfuncreate): 1.2725645584163707364143503829855104713
+39 (lfunderiv): 0.44714108719078457970225656221901906249
+39 (lfunlambda): 0.13675913322137212158503856141594714368
+39 (lfunderivlambda): 0.17013636341135599774663836705641169284
+39 (lfuncheckfeq): -126
+39 (lfunhardy): -1.2423170473203508839664397185125926678
+39 (lfunorderzero): 0
+39 (lfuntheta): 0.0037418601725423530816919183393838490569
+39 (lfunan): [1, 0.70710678118654752440084436210484903928, 0, 0.500000000000
+00000000000000000000000000, 0.89442719099991587856366946749251049418, 0, 0, 
+0.35355339059327376220042218105242451964, 0.33333333333333333333333333333333
+333334, 0.63245553203367586639977870888654370674]
+Total time spent: 2956
