@@ -53,7 +53,9 @@ lfuncreate(()->[n->lfunan(Mod(2,7),n),1,[0],1,7,((-13-3*sqrt(-3))/14)^(1/6)])),
 \\35
   if(1,my(bnf=bnfinit('a^2+47),bnr=bnrinit(bnf,1));
 lfuncreate([bnr,[[1],[2]]])),
-if(1,my(G=znstar(44,1)); lfuncreate([G,[[3,0],[9,0]]]))
+if(1,my(G=znstar(44,1)); lfuncreate([G,[[3,0],[9,0]]])),
+lfunshift(x^2+1,1),
+lfunshift(x^2+1,-1/2)
 ];
 }
 
