@@ -162,6 +162,7 @@ BA  54- [libpari] FlxX_Laplace, FlxX_invLaplace, FlxqX_Newton, FlxqX_fromNewton
 AP  58- [libpari] QM_ImZ, QM_ImZ_all, QM_ImQ, QM_ImQ_all
 BA  59- [libpari] RgXn_expint
 AP  60- new GP functions nfsubfieldscm, nfsubfieldsmax
+BA  61- new GP function lfunshift
 
   Removed
      1- obsolete function rootsof1_kannan: use nfrootsof1
